Double allocated memory for builds