@@ -19,4 +19,7 @@
 ###
 
 echo $JAVA_HOME
-./gradlew check -Dorg.gradle.java.home=$JAVA_HOME --info
+./gradlew check \
+  -Dorg.gradle.java.home=$JAVA_HOME \
+  -Dorg.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError \
+  --info
